<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello carpods-android!</string>
    <string name="app_name">PodIt</string>
    <string name="edit_message">edit message</string>
    <string name="button_send">send</string>
    <string name="view_database">view database</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="home_location_label">Home Location</string>
    <string name="about_me_label">About Me</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
    <string name="people_list">People List</string>
    <string name="pod_name">Pod Name</string>
    <string name="about_pod_label">About the pod</string>
    <string name="choose">Choose</string>
    <string name="default_time">00:00</string>
    <string name="tell_me_about_pod">Tell me about your pod.</string>
    <string name="pod_members_label">Pod Members:</string>
    <string name="cancel">Cancel</string>
    <string name="tell_me_about_yourself">Tell me about yourself...</string>
    <string name="create_person">Create Person</string>
    <string name="the_people_list">The People List</string>
    <string name="create_a_pod">Create a Pod</string>
    <string name="desc_user_photo">User Photo</string>
    <string name="picture">Picture</string>
    <string name="full_name_label">Full Name</string>
    <string name="hockey_app_id">022eb717ff90637a9966ca23c6d39d46</string>
    <string name="google_api_key">AIzaSyC9w_iQ_BZSPoLvHXP9xj1MLCVjeCxDeJk</string>
    <string name="button_add_location">add location</string>
</resources>
