<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView android:id="@+id/message_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <EditText android:id="@+id/edit_message_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />

    <Button android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:onClick="updateMessage" />

    <TextView android:id="@+id/view_database_field"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/view_database" />

</LinearLayout>




    <!--@Test-->
    <!--public void shouldInitializeTextField(){-->
    <!--private String message = "test"-->
        <!--HelloAndroidActivity.updateMessage(message);-->
        <!--assert(message.equals(message))-->
    <!--}-->