<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="5dp">

    <!-- FIXME: convert this to a relative layout to avoid severely nested Linear Layouts -->
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="120dp"
                  android:layout_gravity="left">
        <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/profile_picture"
                android:layout_gravity="center"
                android:src="@drawable/default_picture"
                android:maxWidth="48dp"
                android:maxHeight="48dp"
                android:baselineAlignBottom="false"
                android:scaleType="centerCrop"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:adjustViewBounds="false"
                android:layout_margin="5dp"
                android:contentDescription="@string/picture" />
        <LinearLayout android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent">
            <EditText android:id="@+id/pod_name"
                      android:layout_width="fill_parent"
                      android:layout_height="@dimen/edit_text_height"
                      android:textSize="25sp"
                      android:lines="1"
                      android:singleLine="true"
                      android:hint="@string/pod_name"/>
            <Spinner android:id="@+id/home_location_spinner"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="0dp"
                     android:paddingTop="0dp"
                     android:entries="@array/home_locations"
                     android:prompt="@string/choose" />
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <!-- FIXME: check this out for implementation for the timepicker for the onclick functionality of the display times:
                     FIXME: http://www.mkyong.com/android/android-time-picker-example/-->
                <!--<TimePicker android:id="@+id/leave_time_picker"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content" /> -->
                <!-- FIXME: create a preferences activity to determine if the user prefers military or 12-hour time -->
                <TextView android:id="@+id/departure_time"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:textSize="15sp"
                          android:text="@string/default_time"/>
                <TextView android:id="@+id/return_time"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:textSize="15sp"
                          android:text="@string/default_time"/>
            </LinearLayout>
         </LinearLayout>
    </LinearLayout>

    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <TextView android:id="@+id/about_pod_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/about_pod_label"
                  android:textIsSelectable="false"
                  style="?android:attr/listSeparatorTextViewStyle"/>
        <EditText android:id="@+id/about_pod"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/tell_me_about_pod"
                  android:minLines="3"
                  android:lines="3"
                  android:focusableInTouchMode="true"/>
    </LinearLayout>

    <RelativeLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="right"
                  android:gravity="right">
        <TextView android:id="@+id/pod_members_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/pod_members_label"
                  android:layout_gravity="center_vertical"
                  style="?android:attr/listSeparatorTextViewStyle"
                  android:layout_alignParentBottom="false"
                  android:layout_alignBottom="@+id/add_member"/>
        <ImageView android:id="@+id/add_member"
                   android:layout_height="32dp"
                   android:layout_width="32dp"
                   android:src="@drawable/ic_add_person"
                   android:clickable="true"
                   android:onClick="addMemberClick"
                   android:gravity="center"
                   android:contentDescription="New Member"
                   android:layout_alignParentRight="true"
                   android:layout_alignParentTop="true"
                   android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout android:id="@+id/member_list"
                  android:orientation="vertical"
                  android:layout_height="fill_parent"
                  android:layout_width="fill_parent">
    </LinearLayout>

</LinearLayout>